--- a/sandbox.html
+++ b/sandbox.html
@@ -13,8 +13,9 @@
   <div id="place">
     {{ mcar }}
     {{ tree }}
-
   </div>
+  <br>
+  <br>
 
   <!-- عشان تربط ال فيو مع صفحتنا حط الرابط ذا -->
   <script src="https://unpkg.com/vue@next"></script>
@@ -34,7 +35,7 @@
       // we put the function inside of data 
       data: function() {
            return {
-             mcar: 'hello i am a car',tree: "heey i am tree",
+             mcar: 50+50,tree: "heey i am tree",
         }
       }
     })
