--- a/sandbox.html
+++ b/sandbox.html
@@ -35,6 +35,8 @@
       // we put the function inside of data 
       data: function() {
            return {
+            //  غالبا بالجافا حاف راح تحط documint.getelmentbyid..
+            // بس هنا شف كيف اختصرنا شي كثير...
              mcar: 50+50,tree: "heey i am tree",
         }
       }
