--- a/sandbox.html
+++ b/sandbox.html
@@ -36,7 +36,7 @@
       data: function() {
            return {
             //  غالبا بالجافا حاف راح تحط documint.getelmentbyid..
-            // بس هنا شف كيف اختصرنا شي كثير...
+            // بس هنا شف كيف اختصرنا شي كثير....
              mcar: 50+50,tree: "heey i am tree",
         }
       }
