--- a/sandbox.html
+++ b/sandbox.html
@@ -13,9 +13,12 @@
   <div id="place">
     {{ mcar }}
     {{ tree }}
+    {{mba}}
+    {{tha}}
   </div>
   <br>
   <br>
+
 
   <!-- عشان تربط ال فيو مع صفحتنا حط الرابط ذا -->
   <script src="https://unpkg.com/vue@next"></script>
@@ -32,12 +35,21 @@
     // يعني هل البرنامج كله راج يعيش داخل الاب ؟
     // an instance can be treeted the same as an object..
     let Myapp = Vue.createApp({
+
+
       // we put the function inside of data 
-      data: function() {
-           return {
+      data:
+        function ab() {
+          return {
             //  غالبا بالجافا حاف راح تحط documint.getelmentbyid..
             // بس هنا شف كيف اختصرنا شي كثير....
-             mcar: 50+50,tree: "heey i am tree",
+            mcar: 50 + 50, tree: "heey i am tree",
+          }
+        }
+    }, {
+      data: function () {
+        return {
+          tha: "wow?"
         }
       }
     })
